--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Mountains+of+Christmas:wght@400;700&family=PT+Serif&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:wght@200;300;500;600&family=Spicy+Rice&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Mountains+of+Christmas:wght@400;700&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=PT+Serif&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:wght@200;300;500;600&family=Spicy+Rice&display=swap"
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
